# agentic-newsroom

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: asset-producer.md  content-strategist.md  news-scanner.md  publisher.md
config/: schema.yaml
config/examples/: ecommerce.yaml  fintech.yaml  healthcare-saas.yaml
examples/: sample-draft.json
examples/launch/: article-preview.html  linkedin-post.md  medium-post.md  render_architecture.py  render_article_preview.py
skills/content-engine/: SKILL.md
src/content_engine/: __init__.py  assets.py  cli.py  publisher.py  scanner.py  strategist.py
templates/nextjs-article/: og-image.html  schema-ld.json  template.mdx
tests/: test_assets.py  test_cli.py  test_publisher.py  test_scanner.py  test_strategist.py
tests/fixtures/: sample-config.yaml  sample-rss.xml
